--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-writer": "^1.6.0",
     "express": "^4.21.2",
     "googleapis": "^105.0.0",
+    "imap": "^0.8.17",
     "mailparser": "^3.7.2"
   }
 }
