--- a/gmail.conf
+++ b/gmail.conf
@@ -1,2 +1,2 @@
 const EMAIL = 'kensciodevelopment001@gmail.com'; // Replace with your email
-const APP_PASSWORD = ''; // Replace with your app password
+const APP_PASSWORD = 'govl suur yqlx sapr'; // Replace with your app password
