code in bit bucket

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules
-!credentials.json
 token.json
 last_processed.json
 data/*
 !data/
 src/test_data.js
-!conf/
+!conf
 !data/demo_data.csv
+conf/credentials.json
