--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "googleapis": "^105.0.0",
     "imap": "^0.8.17",
     "mailparser": "^3.7.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.5",
+    "typescript": "^5.7.3"
   }
 }
